GRAXConnect/main/default/objects/GRAXSettings__c/fields/BatchMaxExecutionNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchMaxExecutionNumber__c</fullName>
    <label>BatchMaxExecutionNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>