GRAXConnect/main/default/objects/GRAXSettings__c/fields/Display_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Organization_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Display Organization Name on the table</inlineHelpText>
    <label>Display Organization Name</label>
    <type>Checkbox</type>
</CustomField>