GRAXConnect/main/default/objects/GRAXSettings__c/fields/Display_Outside_Records_Only__c.field-meta.xml
<CustomField>
    <fullName>Display_Outside_Records_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Display Outside Records Only</inlineHelpText>
    <label>Display Outside Records Only</label>
    <type>Checkbox</type>
</CustomField>