GRAXConnect/main/default/objects/GRAXSettings__c/fields/EnableFieldTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableFieldTracking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Field Tracking</label>
    <type>Checkbox</type>
</CustomField>