GRAXConnect/main/default/objects/GRAXSettings__c/fields/EnableObjectTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableObjectTracking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Object Tracking</label>
    <type>Checkbox</type>
</CustomField>