GRAXConnect/main/default/objects/GRAXSettings__c/fields/Graph_DB_Password__c.field-meta.xml
<CustomField>
    <fullName>Graph_DB_Password__c</fullName>
    <defaultValue>"b.CJcfVY65ci0m.kGUJgrYyoYc75vdw"</defaultValue>
    <label>Graph DB Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>