GRAXConnect/main/default/objects/GRAXSettings__c/fields/Graph_DB_URL__c.field-meta.xml
<CustomField>
    <fullName>Graph_DB_URL__c</fullName>
    <defaultValue>"https://db-ljovrmxu24s76s1jbphc.graphenedb.com:24780"</defaultValue>
    <inlineHelpText>E.G. https://hobby-ilpalckeehocgbkeoncdnjal.dbs.graphenedb.com:24780</inlineHelpText>
    <label>Graph DB URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>