GRAXConnect/main/default/objects/GRAXSettings__c/fields/Graph_DB_Username__c.field-meta.xml
<CustomField>
    <fullName>Graph_DB_Username__c</fullName>
    <defaultValue>"app81968631-13521279694483497"</defaultValue>
    <inlineHelpText>Graph DB Username</inlineHelpText>
    <label>Graph DB Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>