GRAXConnect/main/default/objects/GRAXSettings__c/fields/GRAX_API_Url__c.field-meta.xml
<CustomField>
    <fullName>GRAX_API_Url__c</fullName>
    <label>GRAX API Url</label>
    <type>Url</type>
</CustomField>