GRAXConnect/main/default/objects/GRAXSettings__c/fields/GRAX_Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Flow_URL__c</fullName>
    <defaultValue>"https://db-fyy9k3vu59gn11jzpimp.graphenedb.com:24780"</defaultValue>
    <label>GRAX Flow URL</label>
    <type>Url</type>
</CustomField>