GRAXConnect/main/default/objects/GRAXSettings__c/fields/Heroku_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Heroku_App_Name__c</fullName>
    <description>Heroku Application Name</description>
    <inlineHelpText>Heroku Application Name</inlineHelpText>
    <label>Heroku App Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>