GRAXConnect/main/default/objects/GRAXSettings__c/fields/Postgres_URL__c.field-meta.xml
<CustomField>
    <fullName>Postgres_URL__c</fullName>
    <description>Postgres URL used for Audit Trail</description>
    <inlineHelpText>Postgres URL used for Audit Trail</inlineHelpText>
    <label>LicenseToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>