GRAXConnect/main/default/objects/GRAXSettings__c/fields/QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>QueryLimit__c</fullName>
    <label>QueryLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>