GRAXConnect/main/default/objects/GRAXSettings__c/fields/QueryOrderBy__c.field-meta.xml
<CustomField>
    <fullName>QueryOrderBy__c</fullName>
    <label>QueryOrderBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>