GRAXConnect/main/default/objects/GRAXSettings__c/fields/s3accesskeyid__c.field-meta.xml
<CustomField>
    <fullName>s3accesskeyid__c</fullName>
    <description>s3accesskeyid used for Audit Tracking</description>
    <inlineHelpText>s3accesskeyid used for Audit Tracking</inlineHelpText>
    <label>s3accesskeyid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>