GRAXConnect/main/default/objects/GRAXSettings__c/fields/s3bucket__c.field-meta.xml
<CustomField>
    <fullName>s3bucket__c</fullName>
    <description>s3bucket Used for GRAX Audit Trail</description>
    <inlineHelpText>s3bucket Used for GRAX Audit Trail</inlineHelpText>
    <label>s3bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>