GRAXConnect/main/default/objects/GRAXSettings__c/fields/s3region__c.field-meta.xml
<CustomField>
    <fullName>s3region__c</fullName>
    <label>s3region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>