GRAXConnect/main/default/objects/GRAXSettings__c/fields/s3secretaccesskey__c.field-meta.xml
<CustomField>
    <fullName>s3secretaccesskey__c</fullName>
    <description>s3secretaccesskey used for GRAX Audit Trail</description>
    <inlineHelpText>s3secretaccesskey used for GRAX Audit Trail</inlineHelpText>
    <label>s3secretaccesskey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>